php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #44242 metaphone('CMXFXM') crashes PHP
Submitted: 2008-02-25 16:05 UTC Modified: 2008-02-25 22:43 UTC
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:1 (100.0%)
From: nicolas at audiofanzine dot com Assigned:
Status: Closed Package: Reproducible crash
PHP Version: 5.2.5 OS: Linux & Windows
Private report: No CVE-ID: None
 [2008-02-25 16:05 UTC] nicolas at audiofanzine dot com
Description:
------------
The following code results in a PHP crash with a "zend_mm_heap corrupted" message, either on an UTF-8 environement or ISO-8859-1, with Linux or Windows.

Reproduce code:
---------------
<?php
echo metaphone('CMXFXM');
?>

Actual result:
--------------
KMKSFKSM[Mon Feb 25 17:02:41 2008]  Script:  'test.php'
---------------------------------------
/usr/local/src/php/Zend/zend_variables.h(35) : Block 0xb79dcfb4 status:
/usr/local/src/php/Zend/zend_variables.c(36) : Actual location (location was relayed)
Beginning:      OK (allocated on /usr/local/src/php/ext/standard/metaphone.c:435, 8 bytes)
    Start:      OK
      End:      Overflown (magic=0x00000000 instead of 0xC5FC605D)
                1 byte(s) overflown
---------------------------------------
[Mon Feb 25 17:02:41 2008]  Script:  'test.php'
/usr/local/src/php/ext/standard/metaphone.c(435) :  Freeing 0xB79DCFB4 (8 bytes), script=test.php
=== Total 1 memory leaks detected ===


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2008-02-25 22:43 UTC] felipe@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Wed Sep 16 22:00:02 2026 UTC