MFB: Fixed bug #44242 (metaphone('CMXFXM') crashes PHP)